--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,11 +70,17 @@ tfoot > tr:last-child > th {
     display: flex;
     flex-direction: column;
 }
+.gridrow .card-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.gridrow .card-image img {
+    max-width: 100%;
+    max-height: 100%;
+}
 .gridrow .card-text {
     flex: auto;
-}
-.invalid-feedback.nonfield {
-    display: block;
 }
 
 
